--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Seth Kerrey</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Seth Kerrey Projects</h1>
+    <div>
+        
+    </div>
 </body>
 </html>
