Add logo, update index.html, update styles.css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   <title>Seth Kerrey</title>
 </head>
 <body>
-    <h1>Seth Kerrey Projects</h1>
-    <div>
-        
-    </div>
+    <header>
+        <h1>
+            HEADER
+        </h1>
+    </header>
+    <main>
+        <h1>
+            BODY
+        </h1>
+    </main
+    <footer>
+        <h1>
+            Footer
+        </h1>
+    </footer>
 </body>
 </html>
