Updated index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -9,19 +9,15 @@
 </head>
 <body>
     <header>
-        <h1>
-            HEADER
-        </h1>
+        header
     </header>
     <main>
-        <h1>
-            BODY
-        </h1>
-    </main
+        main
+        <br>
+        projects
+    </main>
     <footer>
-        <h1>
-            Footer
-        </h1>
+        footer
     </footer>
 </body>
 </html>
