--- a/index.html
+++ b/index.html
@@ -10,11 +10,51 @@
 <body>
     <header>
         header
+        <div class="nav">
+            <a href="#">Home</a>
+            <a href="#">Bio</a>
+            <a href="#">Resume</a>
+            <a href="#">Projects</a>
+            <a href="#">Contact</a>
+        </div>
     </header>
     <main>
-        main
-        <br>
-        projects
+        <div class="bio">
+            <h1>
+                Bio
+            </h1>
+            <p>
+                Seth Kerrey recently graduated Metropolitan Community College (MCC) with an Associate Degree in Front-End Web Development. His work at MCC reflects the hard work and dedication he has for learning web development as he graduated with academic honors, a member of Phi Theta Kappa, a recipient of the Peter Kiewit Foundation Vocational Scholarship, and made it onto MCC’s Dean’s List.
+            </p>
+            <p>
+                Currently studying at Bellevue University, Seth is projected to graduate in February 2023 with a Bachelor of Science in Web Design. His goal is to find sustainable employment within his career field while still in college. Seth’s resume can be found here.
+            </p>
+            <p>
+                Seth specializes in HTML5, CSS3, JavaScript and has worked with coding languages like XML, MySQL, and PHP. Seth is also learning to use frameworks like React and Angular to further his knowledge of web development.
+            </p>
+            <p>
+                When Seth is not studying he engages in activities with friends and family. Some days he will exercise, go on walks, or spend time planning and organizing events for family get-togethers. Other areas of interest for Seth are video games, sand volleyball, and reading.
+            </p>
+        </div>
+        <div class="resume">
+            <h1>
+                Resume
+            </h1>
+            <p>
+                Work Experiences:
+                <br>
+                Advertising Specialist – 2018 to 2020
+                <br>
+                Data Technician – 2016 to 2016
+                <br>
+                Farm Hand – 2012 to 2016
+            </p>
+            <table>
+                <th>
+                    
+                </th>
+            </table>
+        </div>
     </main>
     <footer>
         footer
