--- a/index.html
+++ b/index.html
@@ -43,16 +43,36 @@
             <p>
                 Work Experiences:
                 <br>
-                Advertising Specialist – 2018 to 2020
+                Web & Graphic Designer - 2021 - Current
                 <br>
-                Data Technician – 2016 to 2016
+                Advertising Specialist - 2018 to 2020
                 <br>
-                Farm Hand – 2012 to 2016
+                Data Technician - 2016 to 2016
             </p>
             <table>
-                <th>
-                    
-                </th>
+                <tr>
+                    <th colspan="3">Skills</th>
+                </tr>
+                <tr>
+                    <td>HTML5</td>
+                    <td>WordPress</td>
+                    <td>Website Optimization</td>
+                </tr>
+                <tr>
+                    <td>CSS3</td>
+                    <td>Bootstrap</td>
+                    <td>UX/UI Architecture</td>
+                </tr>
+                <tr>
+                    <td>JavaScript</td>
+                    <td>jQuery</td>
+                    <td>Unique Content Creation</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>GitHub</td>
+                    <td>Team Contribution</td>
+                </tr>
             </table>
         </div>
     </main>
