--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <!-- add icon here -->
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <title>Seth Kerrey</title>
 </head>
 <body>
@@ -77,7 +80,9 @@
         </div>
     </main>
     <footer>
-        footer
+        <h1>
+            Footer
+        </h1>
     </footer>
 </body>
 </html>
