Add projects folder, update index.html, update styles.css
Project folder:
/contactform
/downtowndiner
/gardenpros
/keyboard
/pipedownrecords

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 <br>
                 Data Technician - 2016 to 2016
             </p>
-            <table>
+            <table class="table table-hover">
                 <tr>
-                    <th colspan="3">Skills</th>
+                    <th>Skills</th>
                 </tr>
                 <tr>
-                    <td>HTML5</td>
+                    <td class="bg-info">HTML5</td>
                     <td>WordPress</td>
                     <td>Website Optimization</td>
                 </tr>
@@ -77,12 +77,24 @@
                     <td>Team Contribution</td>
                 </tr>
             </table>
+            <h1>
+                Projects
+            </h1>
+            <ul class="list-group">
+                <li><a href="projects/keyboard/index.html" class="list-group-item list-group-item-action">Keyboard</a></li>
+                <li><a href="https://sjkerrey.portfolios.mccinfo.net/thelandne/">Back to the Land</a></li>
+                <li><a href="projects/pipedownrecords/home.html">Pipe Down Records</a></li>
+                <li><a href="projects/contactform/contact.html">Contact Form</a></li>
+                <li><a href="projects/gardenpros/gardenpros.html">Garden Pros</a></li>
+                <li><a href="projects/downtowndiner/final.html">Downtown Diner</a></li>
+            </ul>
         </div>
     </main>
     <footer>
         <h1>
             Footer
         </h1>
+        <p><em>Copyright © 2021 </em>Seth Kerrey</p>
     </footer>
 </body>
 </html>
