--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h1>
                 Projects
             </h1>
-            <ul class="list-group">
+            <ul class="list-group" style="list-style-type: none;">
                 <li><a href="projects/keyboard/index.html" class="list-group-item list-group-item-action">Keyboard</a></li>
                 <li><a href="https://sjkerrey.portfolios.mccinfo.net/thelandne/">Back to the Land</a></li>
                 <li><a href="projects/pipedownrecords/home.html">Pipe Down Records</a></li>
