--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Card Effect</title>
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 <link rel="stylesheet" href="style.css">
 <!-- 
   Code by quangdao from codepen.com 
@@ -15,7 +16,7 @@
      <div class="card">
        <div class="face face1">
          <div class="content">
-            <img src="sk-website.png" alt="website-logo-white">            
+            <img src="img/sk-website.png" alt="website-logo-white">            
            <h3>Portfolio</h3>
          </div>
        </div>
@@ -29,7 +30,7 @@
     <div class="card">
        <div class="face face1">
          <div class="content">
-          <img src="sk-school.png" alt="school-logo-white">
+          <img src="img/sk-school.png" alt="school-logo-white">
             <h3>School Projects</h3>
          </div>
        </div>
