--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Card Effect</title>
+<title>Seth Kerrey | Portfolio</title>
 <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 <link rel="stylesheet" href="style.css">
 <!-- 
