--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   Code by quangdao from codepen.com 
   Adapted by Seth Kerrey 12/13/2022
 -->
+<script src="https://kit.fontawesome.com/518dc8e572.js"></script>
 </head>
 <body>
+
+
 
   <div class="container">
 
@@ -40,6 +43,20 @@
          </div>
        </div>
     </div>
+
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <i class="fa-brands fa-github" style="padding: 26px 51.71px;"></i>
+           <h3>GitHub</h3>
+        </div>
+      </div>
+      <div class="face face2">
+        <div class="content">
+          <a href="https://github.com/skerrey" type="button">View Site</a>
+        </div>
+      </div>
+   </div>
 
   </div>
   
